--- a/src/菜单/css3垂直手风琴下拉列表菜单/test/css/index.css
+++ b/src/菜单/css3垂直手风琴下拉列表菜单/test/css/index.css
@@ -23,6 +23,10 @@ body {
   max-width: 600px;
   margin: 4em auto;
   background-color: #4d5158;
+  box-shadow: 0 4px 40px #70ac76;
+}
+.tree ul {
+  display: none;
 }
 .tree li {
   user-select: none;
@@ -35,10 +39,137 @@ body {
   opacity: 0;
   position: absolute;
 }
+.tree label {
+  cursor: pointer;
+}
 .tree label,
 .tree a {
   position: relative;
   display: block;
   padding: 18px 18px 18px 64px;
   background-color: #4d5158;
+  box-shadow: inset 0 -1px #555960;
+  color: #fff;
+  font-size: 1.6rem;
+}
+.no-touch .tree label:hover,
+.no-touch .tree a:hover {
+  background-color: #53565d;
+}
+.tree label::before,
+.tree label::after,
+.tree a::after {
+  /* 小图标 */
+  content: '';
+  display: inline-block;
+  position: absolute;
+  top: 50%;
+  height: 16px;
+  width: 16px;
+
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+.tree label::before,
+.tree label::after {
+  background-image: url(../img/cd-icons.svg);
+  background-repeat: no-repeat;
+
+}
+.tree label::before {
+  /* 箭头 icon */
+  left: 18px;
+  background-position: 0 0;
+  transform: translateY(-50%) rotate(-90deg);
+  -webkit-transform: translateY(-50%) rotate(-90deg);
+  -moz-transform: translateY(-50%) rotate(-90deg);
+  -o-transform: translateY(-50%) rotate(-90deg);
+  -ms-transform: translateY(-50%) rotate(-90deg);
+}
+.tree label::after {
+  /* 文件夹 icons */
+  left: 41px;
+  background-position: -16px 0;
+}
+.tree a::after {
+  /* image icon */
+  left: 36px;
+  background: url(../img/cd-icons.svg) no-repeat -48px 0;
+}
+.tree input[type=checkbox]:checked + label::before {
+    /* rotate arrow(翻转箭头) */
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+.tree input[type=checkbox]:checked + label::after {
+/* 当checkbox被选中即父菜单被打开时，显示 打开状态的 文件夹 icon*/
+  background-position: -32px 0;
+}
+.tree input[type=checkbox]:checked + label + ul,
+.tree input[type=checkbox]:checked + label:nth-of-type(n) + ul {
+/* use label:nth-of-type(n) to fix a bug on safari (<= 8.0.8) with multiple adjacent-sibling selectors*/
+/* show children when item is checked */
+  display: block;
+}
+.tree ul label,
+.tree ul a {
+  padding-left: 82px;
+  background-color: #35383d;
+  box-shadow: inset 0 -1px #41444a;
+}
+.no-touch .tree ul label:hover,
+.no-touch .tree ul a:hover {
+  background-color: #3c3f45;
+}
+.tree > li:last-of-type > label,
+.tree > li:last-of-type > a,
+.tree > li > ul > li:last-of-type > label,
+.tree > li > ul > li:last-of-type > a {
+  box-shadow: none;
+}
+/* 二级菜单  start */
+.tree ul label::before {
+  left: 36px;
+}
+.tree ul label::after,
+.tree ul a::after {
+  left: 59px;
+}
+/* 二级菜单  end */
+/* 三级菜单  start */
+.tree ul ul label,
+.tree ul ul a {
+  padding-left: 100px;
+}
+.tree ul ul label::before {
+  left: 54px;
+}
+.tree ul ul label::after,
+.tree ul ul a::after {
+  left: 77px;
+}
+/* 三级菜单  end */
+/* 四级菜单  start */
+.tree ul ul ul label,
+.tree ul ul ul a {
+  padding-left: 118px;
+}
+.tree ul ul ul label::before {
+  left: 72px;
+}
+.tree ul ul ul label::after,
+.tree ul ul ul a::after {
+  left: 95px;
+}
+/* 四级菜单  end */
+.tree.animated label::before {
+  transition: transform 0.3s;
+  -webkit-transition: -webkit-transform 0.3s;
+  -moz-transition: -moz-transform 0.3s;
 }
