--- a/src/Loading/demo2/style.css
+++ b/src/Loading/demo2/style.css
@@ -1,8 +1,24 @@
+.content-wrap .content {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+}
+.content-wrap .loading-wrap {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  opacity: 1;
+  z-index: 1040;
+  line-height: 500px;
+  text-align: center;
+}
 .spinner {
-  margin: 100px auto;
   width: 32px;
   height: 32px;
   position: relative;
+  display: inline-block;
 }
 
 .cube1, .cube2 {
