canvas绘制矩形和圆

--- a/src/canvas绘制雨滴特效/public/css/style.css
+++ b/src/canvas绘制雨滴特效/public/css/style.css
@@ -4,9 +4,8 @@ html, body {
 body {
     margin: 0;
     padding: 0;
-    background-color: red;
-    /*overflow: hidden;*/
 }
 #canvas {
+    display: block;
     background-color: black;
 }
